2005-11-15  Zoltan Varga  <vargaz@gmail.com>

	* Assembly.cs AssemblyNameFlags.cs FieldInfo.cs PropertyInfo.cs 
	CustomAttributeData.cs PortableExecutableKinds.cs 
	ObfuscateAssemblyAttribute.cs Module.cs ObfuscationAttribute.cs: Net 2.0 RTM
	updates.

2005-11-11  Marek Safar  <marek.safar@seznam.cz>

	* MethodBase.cs, TypeDelegator.cs: Reflect Type changes.

2005-10-30  Zoltan Varga  <vargaz@freemail.hu>

	* FieldInfo.cs: Add an internal UMarshal property which can by
	overriden in FieldBuilder.

2005-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MonoMethod.cs : (ToString) add suffix " ByRef" for byref parameters.
	  Fixed bug #76541.

2005-10-04  Martin Baulig  <martin@ximian.com>

	* MonoGenericClass.cs (MonoGenericClass.GetParentType): Changed
	return type from `MonoGenericClass to `Type'.

2005-09-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* AssemblyName.cs: Add ParseName internal call, to parse
	long format assembly names. 
	
2005-09-25  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoProperty.cs: Invoke throws a SecurityException but GetValue must
	throw TargetInvocationException with the SecurityException as an inner
	exception. See CAS unit tests for System.Web.dll.

2005-09-20  Martin Baulig  <martin@ximian.com>

	* Assembly.cs: Removed some unused debugger icalls.

2005-09-17  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Remove obsolete Mvid property.

2005-09-09  Martin Baulig  <martin@ximian.com>

	Reflect latest API changes in the August CTP.

	* MethodBase.cs (MethodBase.MakeGenericMethod): Removed.

	* MethodInfo.cs (MethodInfo.MakeGenericMethod): Added here.

2005-09-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyName.cs: Apply second half of Chris Micacchi's patch

2005-09-07  Miguel de Icaza  <miguel@novell.com>

	* AssemblyName.cs: Apply patch from Chris Micacchi to serialize
	the keyToken as "_PublicKeyToken".

2005-09-05  Martin Baulig  <martin@ximian.com>

	Reflect latest API changes in the August CTP.
