@@ -1,5 +1,7 @@
 2005-11-15  Zoltan Varga  <vargaz@gmail.com>
 
+	* Module.cs: Add MDStreamVersion property.
+
 	* Assembly.cs AssemblyNameFlags.cs FieldInfo.cs PropertyInfo.cs 
 	CustomAttributeData.cs PortableExecutableKinds.cs 
 	ObfuscateAssemblyAttribute.cs Module.cs ObfuscationAttribute.cs: Net 2.0 RTM
